# llm_benchmark

./: .gitignore  README.md  bench.py  pyproject.toml  webui.py
config/: default.yaml  lb.yaml
datasets/: historical_multi_turn.json
lb/: app.py  backend_client.py  cli.py  config.py  models.py  monitor.py  process_manager.py  scheduler.py
lb/config/: default.yaml
lb/static/: app.js  index.html  style.css
src/: cli.py  config.py
src/autotune/: __init__.py  config.py  evaluator.py  optimizer.py  search.py  templates.py
src/client/: openai_client.py
src/device/: __init__.py  monitor.py  profile.py
src/eval/: README.md  __init__.py  base.py  prompts.py  registry.py  runner.py  scorer.py
src/eval/datasets/: __init__.py  ceval.py  gpqa.py  mmlu_pro.py  mmlu_redux.py  super_gpqa.py
src/load/: controller.py  dataset.py  generator.py
src/metrics/: collector.py  vllm_exporter.py
src/report/: generator.py
src/scenario/: manager.py
src/webui/: __init__.py  app.py  task_manager.py
src/webui/pages/: check.py  eval.py  lb.py  providers.py  results.py  settings.py
src/webui/views/: autotune.py  balancer.py  check.py  eval.py  gpu.py  lb.py  results.py  settings.py
tests/: test_autotune.py  test_device.py  test_lb_api.py  test_lb_config.py  test_lb_scheduler.py
