[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-benchmark"
version = "0.1.0"
description = "LLM High-Concurrency Simulation Testing Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "tenacity>=8.2.0",
    "datasets>=2.14.0",
    "tqdm>=4.66.0",
    "pynvml>=11.5.0",  # GPU utilization monitoring
    "optuna>=3.4.0",  # Auto-tuning Bayesian optimization
]

[project.scripts]
bench = "bench:cli"
vllm-lb = "lb.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "lb*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
